# Public header files
nobase_include_HEADERS = \
                ctest/_annotations.h \
                ctest/_preprocessor.h \
                ctest/exec.h \
                ctest/exec/exec_hooks.h \
                ctest/exec/failure.h \
                ctest/exec/location.h \
                ctest/exec/output.h \
                ctest/exec/reporter.h \
                ctest/exec/result.h \
                ctest/exec/runner.h \
                ctest/exec/stage.h \
                ctest/exec/suite.h \
                ctest/exec/stacktrace.h \
                ctest/tests.h \
                ctest/tests/assert.h \
                ctest/tests/fixtures.h \
                ctest/tests/tests.h
